--- a/templates/database.html
+++ b/templates/database.html
@@ -40,7 +40,8 @@
   </div>
 
   <div class="datatext">
-  <h2 > Divided in 5 groups by 5 colors, here you can see how this algorithm is grouping all the text uploaded by users. Everyone can decide what content to teach and to remove to this machine. </h2>
+  <h2 > Divided in 5 groups by 5 colors, here you can see how this algorithm is grouping all the text uploaded by users. <br>Everyone can decide what content to teach and to remove to this machine. <br>
+  The colors are assigned by the algorithm itself and change each time content is uploaded or deleted. </h2>
 </div>
 <div class="data-container">
   
