--- a/templates/hello.html
+++ b/templates/hello.html
@@ -25,7 +25,7 @@
         <p class="index" id="elem3"> C </p>
         <a class="index" id="elem4" href="{{ url_for('database') }}">D</a>
         <a class="index" id="elem5" href="{{ url_for('info') }}"> E </a>
-        <a class="index" id="elem7" href="{{ url_for('loop') }}">♁ </a>
+        <a class="index" id="elem7" href="{{ url_for('info') }}">♁ </a>
     </div>
 
     <div class="introtext">
@@ -38,7 +38,7 @@
         <p>On this website we visualise the connection that Word2Vec, an algorithm used by Google, does and we propose a new
             alternative by asking the user to upload their text to generate a newer Artificial Intelligence, in a more democratic
             way.</p>
-        <a id="begin" class="button" href="{{ url_for('start') }}">Begin</a>
+        <button id="begin"><a href="{{ url_for('start') }}">Begin</a></button>
 
 
     </div>
